# pfn-coding-task-2023

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  test_with_pytest.yaml
src/: config_interface.py  histogram.py  plane.py
tests/: test_solve.py
