[tool.poetry]
name = "pfn"
version = "0.1.0"
description = ""
authors = ["tubo213"]

[tool.poetry.dependencies]
python = "3.8.10"
jupyter = "^1.0.0"
numpy = "^1.24.3"
ipython = "8.12"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
matplotlib = "^3.7.1"
pytest = "^7.3.1"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
